# kodiak-web-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ev_dispatch_repo.yml  ev_pr-to-dev-merged.yml  ev_pr-to-dev.yml  ev_pr-to-main-merged.yml  ev_pr-to-main.yml  ev_push-tag-test.yml  ev_push-to-feat.yml  ev_push-to-patch.yml  ev_push-to-rel.yml  fn_build-push-docker-image.yml  fn_pack-upload-artifact.yml  wf_build-test.yml  wf_full.yml
client/: index.html
docker/: Dockerfile
src/: lib.rs  main.rs
src/tls/: cert.rs  key.rs  mod.rs
tests/: lib.rs  redirect.rs  status.rs
tests/_setup/: mod.rs
